community/py3-qtgraph: use gpep517 for packaging
This has the benefit that failing unit tests actually fail the `check()`
function, which before succeeded despite failed tests.

--- a/community/py3-qtgraph/APKBUILD
+++ b/community/py3-qtgraph/APKBUILD
@@ -7,24 +7,42 @@ pkgdesc="Scientific Graphics and GUI Library for Python"
 url="https://www.pyqtgraph.org/"
 arch="noarch"
 license="MIT"
-depends="python3 py3-qt5 py3-numpy py3-scipy py3-opengl"
-makedepends="py3-setuptools"
-checkdepends="py3-pytest xvfb-run"
+depends="
+	py3-numpy
+	py3-opengl
+	py3-qt5
+	py3-scipy
+	python3
+	"
+makedepends="
+	py3-gpep517
+	py3-setuptools
+	"
+checkdepends="
+	py3-pytest
+	"
 subpackages="$pkgname-pyc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/pyqtgraph/pyqtgraph/archive/pyqtgraph-$pkgver.tar.gz"
 builddir="$srcdir/pyqtgraph-pyqtgraph-$pkgver"
 
 build() {
-	python3 setup.py build
+		gpep517 build-wheel \
+		--wheel-dir .dist \
+		--output-fd 3 3>&1
 }
 
 check() {
+	python3 -m venv --clear --without-pip --system-site-packages .testenv
+	.testenv/bin/python3 -m installer .dist/*.whl
+
 	unset DISPLAY WAYLAND_DISPLAY
-	xvfb-run python3 test.py
+
+	env QT_QPA_PLATFORM=offscreen .testenv/bin/python3 -m pytest
 }
 
 package() {
-	python3 setup.py install --skip-build --root="$pkgdir"
+	python3 -m installer -d "$pkgdir" \
+		.dist/*.whl
 }
 
 sha512sums="
