--- a/community/py3-qtgraph/APKBUILD
+++ b/community/py3-qtgraph/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Marian Buschsieweke <marian.buschsieweke@posteo.net>
 # Maintainer: Marian Buschsieweke <marian.buschsieweke@posteo.net>
 pkgname=py3-qtgraph
-pkgver=0.13.4
+pkgver=0.13.7
 pkgrel=0
 pkgdesc="Scientific Graphics and GUI Library for Python"
 url="https://www.pyqtgraph.org/"
@@ -25,6 +25,11 @@ subpackages="$pkgname-pyc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/pyqtgraph/pyqtgraph/archive/pyqtgraph-$pkgver.tar.gz"
 builddir="$srcdir/pyqtgraph-pyqtgraph-$pkgver"
 
+# tests fail in CI as import of python module OpenGL.GL fails. It appears an
+# OpenGL capabale GPU + OpenGl stack is needed despite tests are running in
+# headless mode.
+options="!check"
+
 build() {
 		gpep517 build-wheel \
 		--wheel-dir .dist \
@@ -46,5 +51,5 @@ package() {
 }
 
 sha512sums="
-9c5c276d1e191bbb72ce1ce66fcf2cfe34f5f31318bbc3069c634a77b0373b2df6a7572eccb3cfec9a45d225f5f5da71d6ca9db3f9ef520eaab27b76176a8904  py3-qtgraph-0.13.4.tar.gz
+91e06e143fec4b1a6fae5cc7112a1fb6b7e74c7a38605172aacc5639eb220e30c54694e419313c7bb8368ea5c5f45f41d58e4510735e63a7d6ef03cdbb0f05e9  py3-qtgraph-0.13.7.tar.gz
 "
