community/bpftrace: bump to llvm18
bpftrace depends on bcc, which can depend on another llvm version.

bpftrace will be functional even with a different llvm version, but it
takes a lot of space for no benefit, so try to sync both versions up:
add a check before build that we build with the same llvm as bcc
(this obviously won't detect if bcc is updated on its own...)

bpftrace has been supporting llvm18 since 0.21.0, so there is no reason
to be out of sync

(cherry picked from commit 53009ed01244769e9c3c311591cc9ef6571fefda)

--- a/community/bpftrace/APKBUILD
+++ b/community/bpftrace/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Adam Jensen <adam@acj.sh>
 pkgname=bpftrace
 pkgver=0.21.2
-pkgrel=2
+pkgrel=3
 pkgdesc="High-level tracing language for Linux eBPF"
 url="https://github.com/iovisor/bpftrace"
 arch="all !x86" # x86 unsupported
 license="Apache-2.0"
-_llvmver=17
+_llvmver=18
 makedepends="
 	asciidoctor
 	bcc-dev
@@ -38,7 +38,20 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/iovisor/bpftrace/archive/v$p
 options="!check !strip"
 subpackages="$pkgname-doc:doc $pkgname-tools:tools:noarch $pkgname-tools-doc:tools_doc"
 
+check_bcc_clang() {
+	# check bcc builds with the same llvm version as we do
+	local bcc_clang
+	bcc_clang=$(readelf -d /usr/lib/libbcc.so.0 \
+			| sed -ne 's/.*libclang-cpp.so\.\([0-9]*\)\..*/\1/p')
+	if [ "$_llvmver" != "$bcc_clang" ]; then
+		echo "BCC depends on LLVM $bcc_clang, update \$_llvmver (was $_llvmver)" >&2
+		exit 1
+	fi
+}
+
 build() {
+	check_bcc_clang
+
 	cmake -B build -G Ninja \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_BUILD_TYPE=MinSizeRel \
