community/tecla: upgrade to 48.0.2
https://gitlab.gnome.org/GNOME/tecla/-/blob/48.0.2/NEWS

--- a/community/tecla/APKBUILD
+++ b/community/tecla/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Krassy Boykinov <kboykinov@teamcentrixx.com>
 # Maintainer: team/gnome <kboykinov@teamcentrixx.com>
 pkgname=tecla
-pkgver=47.0
-pkgrel=1
+pkgver=48.0.2
+pkgrel=0
 pkgdesc="Libadwaita keyboard layout viewer for the Gnome Desktop"
 url="https://gitlab.gnome.org/GNOME/tecla"
 arch="all"
@@ -15,7 +15,7 @@ makedepends="
 	meson
 	"
 subpackages="$pkgname-dev $pkgname-lang" # !! watch for -doc in future updates
-source="https://download.gnome.org/sources/tecla/${pkgver%.*}/tecla-$pkgver.tar.xz"
+source="https://download.gnome.org/sources/tecla/${pkgver%%.*}/tecla-$pkgver.tar.xz"
 
 build() {
 	abuild-meson . output
@@ -31,5 +31,5 @@ package() {
 }
 
 sha512sums="
-82c29b7672d78d0cdb1dccd95c159ba4fbbe2cda36b5b491b0dde530985fa718d382a0d0c78dffacad50e5d817db1874447069f383de8e2895f6d6216cefb8fc  tecla-47.0.tar.xz
+8284f54d2fdf7320ae3fa38d69995cd5b69751efb4d8aad2508c77f1719c2c7aac196868cfc1442ba653fd39ff56689f841d9d39a96b546f265c19406fb49b46  tecla-48.0.2.tar.xz
 "
