community/localsearch: upgrade to 3.9.0
https://gitlab.gnome.org/GNOME/localsearch/-/blob/3.9.0/NEWS

--- a/community/localsearch/APKBUILD
+++ b/community/localsearch/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: team/gnome <fossdd@pwned.life>
 pkgname=localsearch
-pkgver=3.8.2
-pkgrel=2
+pkgver=3.9.0
+pkgrel=0
 pkgdesc="Data miners for tracker"
 url="https://gitlab.gnome.org/GNOME/localsearch"
 arch="all"
@@ -12,6 +12,7 @@ makedepends="
 	asciidoc
 	dbus-dev
 	enca-dev
+	ffmpeg-dev
 	flac-dev
 	gexiv2-dev
 	giflib-dev
@@ -47,8 +48,7 @@ checkdepends="
 	python3
 	"
 subpackages="$pkgname-dbg $pkgname-lang $pkgname-doc"
-source="https://download.gnome.org/sources/localsearch/${pkgver%.*}/localsearch-$pkgver.tar.xz
-	landlock-gcc14.patch"
+source="https://download.gnome.org/sources/localsearch/${pkgver%.*}/localsearch-$pkgver.tar.xz"
 options="!check" # needs to install itself
 
 # for backwards compatibility
@@ -65,7 +65,6 @@ build() {
 		-Db_lto=true \
 		-Dfunctional_tests="$(want_check && echo true || echo false)" \
 		-Dsystemd_user_services=false \
-		-Dminer_rss=false \
 		-Dlandlock=enabled \
 		. output
 	meson compile -C output
@@ -80,6 +79,5 @@ package() {
 }
 
 sha512sums="
-d037b81467987e31294dfc2ea540db5581e5bbcd1688578d8a338352c3f0841270d78eb54fd8ec1aaa4807e7d15cc787c6ed414b295c9e0c93d286be1a87c661  localsearch-3.8.2.tar.xz
-ece428484ad0b1f29d14802aa36580a58576dc1577872338df0d6e90a7ea7d8210c7eb95f033e30488296e55ea59ff4bd16dde5a52f297c674e7d664465c2256  landlock-gcc14.patch
+693be7a6070ef30e5382e85af346356ee7f07f97d284a6b3cb59c6c4b86d6d2caf5e979f2c9c2a71a332c475d65615d4917b6f148b693c11d26c03f5d81ae3df  localsearch-3.9.0.tar.xz
 "
