community/php84: fix tests
upstream: https://github.com/php/php-src/commit/bd7d3c38ad2e7f67e24014fc5651471ce29487a7

--- a/community/php84/APKBUILD
+++ b/community/php84/APKBUILD
@@ -114,6 +114,7 @@ source="https://www.php.net/distributions/php-$pkgver.tar.xz
 	$pkgname-fpm-version-suffix.patch
 	fix-tests-devserver.patch
 	phpinfo-avif.patch
+	Get-rid-of-atime-change-testing-in-bug72666_variation3.phpt.patch
 	"
 builddir="$srcdir/php-$pkgver"
 
@@ -620,4 +621,5 @@ ec206639d076ddac6c2d1db697a5428ed3be979157db39417af7fbe6ab837e8dc00315ae0e55aea4
 135a23b015ec7fb5be19dc8e12c79f8c044d1e8d2931df1336abebdeacc711d305f311f7b05e750ffbf19a6244c3c03b890664e4a07691daef8e7997158ad49f  php84-fpm-version-suffix.patch
 cc1de2f8d33fccb605c621ac90bdf9202af90006e7d07598dfbe0fece2e30ad69d575966858700d1a5ca940c670709451c421140adfe08ed535271966ccdb2b6  fix-tests-devserver.patch
 8bafce5e474f96b5b54c13c92a5216fa77cdc93ad0dce84e74998ad7a7acc822c1c6dc70c0e9a80bbf5a30e0df2b34f434985b8ded96625a843df795d396b31d  phpinfo-avif.patch
+1c84fa1cdcb9f183ffc8fd5f81d8c985b661cfe36ac7569e6d019f6ee66104f1dc791e57f1ad6cf7f3405936f3f576b58fccb0dd5bdc4b1038fbafc821f8a597  Get-rid-of-atime-change-testing-in-bug72666_variation3.phpt.patch
 "
