main/linux-lts: enable intel ipu6 camera
(cherry picked from commit cb73f06faccc579fde099850d068ce3908c1ab32)

--- a/main/linux-lts/lts.x86_64.config
+++ b/main/linux-lts/lts.x86_64.config
@@ -2053,6 +2053,7 @@ CONFIG_DVB_PLUTO2=m
 CONFIG_DVB_PT1=m
 CONFIG_DVB_SMIPCIE=m
 CONFIG_VIDEO_IPU3_CIO2=m
+CONFIG_VIDEO_INTEL_IPU6=m
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_CADENCE_CSI2RX=m
 CONFIG_VIDEO_CADENCE_CSI2TX=m
