community/tinysparql: upgrade to 3.9.1
https://gitlab.gnome.org/GNOME/tinysparql/-/blob/3.9.1/NEWS

--- a/community/tinysparql/APKBUILD
+++ b/community/tinysparql/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: team/gnome <fossdd@pwned.life>
 pkgname=tinysparql
-pkgver=3.8.2
+pkgver=3.9.1
 pkgrel=1
 pkgdesc="Personal search tool and storage system"
 url="https://tracker.gnome.org/"
@@ -9,6 +9,7 @@ arch="all"
 license="GPL-2.0-or-later"
 makedepends="
 	asciidoc
+	bash
 	bash-completion-dev
 	dbus-dev
 	docbook-xsl-nons
@@ -26,9 +27,9 @@ makedepends="
 	networkmanager-dev
 	vala
 	gi-docgen
+	graphviz
 	"
 checkdepends="
-	bash
 	dbus
 	mandoc
 	"
@@ -45,6 +46,9 @@ source="https://download.gnome.org/sources/tinysparql/${pkgver%.*}/tinysparql-$p
 # for backwards compatibility
 replaces="tracker"
 provides="tracker=$pkgver-r$pkgrel"
+
+# https://gitlab.gnome.org/GNOME/tinysparql/-/issues/482
+[ "$CARCH" = "s390x" ] && options="$options !check"
 
 build() {
 	abuild-meson \
@@ -77,5 +81,5 @@ libs() {
 }
 
 sha512sums="
-45ad15026dc648dae9d09c64df9e0f0f30c061d26f00ff99da08ca16dc302cca113fbd5964af4e1b0e50c1a920b5f9c0eaa1136305f0b5a8d167b163a843d3df  tinysparql-3.8.2.tar.xz
+04aa0715696b4b21af8f52124be23634b0a2216b49a9bf2aa08d5a0baf1f323e02c05397ac167bfce010da99af4a0d7b13058d77b4ba114ad3de90edb9c26bf3  tinysparql-3.9.1.tar.xz
 "
