--- a/community/py3-fastapi/APKBUILD
+++ b/community/py3-fastapi/APKBUILD
@@ -5,8 +5,7 @@ pkgver=0.115.6
 pkgrel=1
 pkgdesc="Modern, high-performance, web framework for building APIs based on standard Python type hints"
 url="https://github.com/tiangolo/fastapi"
-# loongarch64: blocked by py3-orjson
-arch="noarch !loongarch64"
+arch="noarch"
 license="MIT"
 depends="
 	py3-pydantic
