--- a/community/openscad/APKBUILD
+++ b/community/openscad/APKBUILD
@@ -5,10 +5,10 @@ pkgrel=16
 pkgdesc="The programmers solid 3D CAD modeller"
 url="http://openscad.org/"
 # Glew and GLES on ARM don't play well with each other
-# tests fails on s390x and loongarch64
+# tests fails on s390x
 # tests hangs on riscv64
 # tests fails on ppc64le
-arch="x86_64 x86"
+arch="x86_64 x86 loongarch64"
 license="GPL-2.0-only"
 subpackages="$pkgname-doc"
 makedepends="
