testing/hfst: upgrade to 3.16.2

--- a/testing/hfst/APKBUILD
+++ b/testing/hfst/APKBUILD
@@ -2,8 +2,8 @@
 # Contributor: Frankie Robertson <frankie@robertson.name>
 # Maintainer:
 pkgname=hfst
-pkgver=3.16.0
-pkgrel=3
+pkgver=3.16.2
+pkgrel=0
 pkgdesc="Helsinki Finite-State Transducer Technology toolkit"
 url="https://hfst.github.io/"
 arch="all"
@@ -11,6 +11,7 @@ license="LGPL-3.0-or-later"
 makedepends="
 	bison
 	icu-dev
+	openfst-dev
 	py3-gpep517
 	py3-setuptools
 	py3-wheel
@@ -19,11 +20,6 @@ makedepends="
 	"
 subpackages="$pkgname-dev $pkgname-doc py3-$pkgname:py3 $pkgname-libs"
 source="https://github.com/hfst/hfst/releases/download/v$pkgver/hfst-$pkgver.tar.gz"
-
-prepare() {
-	default_prepare
-	update_config_sub
-}
 
 build() {
 	./configure \
@@ -62,5 +58,5 @@ py3() {
 }
 
 sha512sums="
-7c12b8641cd22f1c550c26741d5f46e8a9e1fbd3f9a8b462ce500e38ddac9641e33c59fe3d3474de5499217896fc056605da5fc9bd564fbac254c9949a80f36b  hfst-3.16.0.tar.gz
+e7785cee69f5c0ae5a44801d357868008817e3abd2e8158fb165d13a5d483756d53c2666da78be3d4b1091ced79e01bce4401af4370b54086bbb6acb6ff5cfde  hfst-3.16.2.tar.gz
 "
