--- a/community/py3-twisted/APKBUILD
+++ b/community/py3-twisted/APKBUILD
@@ -1,10 +1,10 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=py3-twisted
-pkgver=22.10.0
-pkgrel=5
+pkgver=24.11.0
+pkgrel=0
 pkgdesc="Asynchronous networking framework written in Python3"
 url="https://twistedmatrix.com/"
-arch="all"
+arch="noarch"
 license="MIT"
 depends="
 	py3-cryptography
@@ -22,12 +22,16 @@ depends="
 	py3-h2
 	py3-setuptools
 	"
-makedepends="py3-gpep517 py3-wheel"
+makedepends="
+	py3-gpep517
+	py3-hatch-fancy-pypi-readme
+	py3-hatchling
+	py3-incremental
+	py3-wheel
+"
 checkdepends="xvfb-run py3-appdirs tzdata py3-asn1 py3-bcrypt"
 subpackages="$pkgname-doc $pkgname-tests $pkgname-pyc"
 source="https://github.com/twisted/twisted/archive/twisted-$pkgver.tar.gz
-	disable-test-missing-ckeygen.patch
-	fix-test-import.patch
 	hanging-test.patch
 	"
 builddir="$srcdir"/twisted-twisted-$pkgver
@@ -80,7 +84,7 @@ check() {
 
 package() {
 	python3 -m installer -d "$pkgdir" \
-		.dist/Twisted*.whl
+		.dist/twisted*.whl
 	# python3 setup.py install --skip-build --root="$pkgdir"
 	# Do not remove the test as it is a legitimate module and not
 	# a (common) packaging mistake by upstream
@@ -104,8 +108,6 @@ doc() {
 }
 
 sha512sums="
-cf9ed96430376d499ae9627a7d0656c05cb99bc9e9b15a8f4166355363818f090bc3c2b383ed4cf19e1e38fb569e8618d35a0ddde2a90a06f3c9a4ea769837e4  twisted-22.10.0.tar.gz
-c432bbc2098bf7e36aaa51a548a5d60de4f790caf10fc9dfa04e11e88b4fbea4c4245106c1152ce4f450082dd8111d5f72b65c5c99ee2d0e5c8e0511ae821b6c  disable-test-missing-ckeygen.patch
-a8e073ff8a35ad8faa95d023e9cf72dc3af0f0e4386fc0e66e57552eb9ff9ae1648b7c0809a5fbb6dca5799db7983280aefcabad1b52bf1187f25b62a4fe39a1  fix-test-import.patch
+19b1754698404e36cf6eeab735a6cd22f6b18b593022211f0f767ccd339c1e54e7bed1a59d941c9bd136c00f0a28e2d8a196f45d93a5f64cd6cf8cd5c516b9f0  twisted-24.11.0.tar.gz
 523a4d89343cc2c9914e15fdfd25b9f89c9bee2a00d6b10c808ad4af4dd46689f5f0ebe529bd2ba4855dc7d80192e79f829192bc9171a5b2ae13dc04a181e352  hanging-test.patch
 "
