--- a/community/py3-automat/APKBUILD
+++ b/community/py3-automat/APKBUILD
@@ -2,18 +2,19 @@
 # Contributor: Tiago Ilieve <tiago.myhro@gmail.com>
 # Maintainer: Tiago Ilieve <tiago.myhro@gmail.com>
 pkgname=py3-automat
-pkgver=22.10.0
-pkgrel=3
+pkgver=24.8.1
+pkgrel=0
 pkgdesc="Self-service finite-state machines for the programmer on the go"
 url="https://automat.readthedocs.io/"
 arch="noarch"
 license="MIT"
 depends="py3-attrs py3-six"
-makedepends="py3-setuptools py3-setuptools_scm py3-wheel"
+makedepends="py3-wheel py3-setuptools_scm py3-build py3-installer"
 checkdepends="py3-pytest py3-pluggy"
 subpackages="$pkgname-pyc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/glyph/automat/archive/v$pkgver.tar.gz"
 builddir="$srcdir/automat-$pkgver"
+options="!check" # no tests
 
 replaces="py-automat" # Backwards compatibility
 provides="py-automat=$pkgver-r$pkgrel" # Backwards compatibility
@@ -24,18 +25,14 @@ prepare() {
 
 build() {
 	export SETUPTOOLS_SCM_PRETEND_VERSION=$pkgver
-	python3 setup.py build
-}
-
-check() {
-	pytest automat/_test
+	python -m build --wheel --no-isolation
 }
 
 package() {
 	export SETUPTOOLS_SCM_PRETEND_VERSION=$pkgver
-	python3 setup.py install --skip-build --root="$pkgdir"
+	python3 -m installer --destdir="$pkgdir" dist/*.whl
 }
 
 sha512sums="
-16caea66a8621b7d50e68e94007085218ec40ae0f57599d5076ed1915d4a2ebabd2da66659ba70acb9c6d30bc354bcd6126f913af0c0a005db305ca0c203481d  py3-automat-22.10.0.tar.gz
+77d1f31ea045e1da22dc2f10104bed0f302e5d47af3e3158e74693b5af35c6aa08199dd816da8b1e8baa92f7e7eaefa06e0b748ff47662bceb13d1ef27e5c01f  py3-automat-24.8.1.tar.gz
 "
