testing/efl: upgrade to 1.28.1
Switch to lua52 to support more architectures

--- a/testing/efl/APKBUILD
+++ b/testing/efl/APKBUILD
@@ -1,12 +1,11 @@
 # Contributor: Boris Faure <boris@fau.re>
 # Maintainer: Boris Faure <boris@fau.re>
 pkgname=efl
-pkgver=1.27.0
+pkgver=1.28.1
 pkgrel=1
 pkgdesc="Enlightenment Foundation Libraries"
 url="https://www.enlightenment.org"
-# ppc64le, riscv64, loongarch64: luajit
-arch="all !ppc64le !riscv64 !loongarch64"
+arch="all"
 license="LGPL-2.1-only"
 makedepends="
 	dbus-dev
@@ -34,7 +33,7 @@ makedepends="
 	libxrandr-dev
 	libxscrnsaver-dev
 	libxtst-dev
-	luajit-dev
+	lua5.2-dev
 	mesa-dev
 	meson
 	openjpeg-dev
@@ -90,5 +89,5 @@ gdb() {
 }
 
 sha512sums="
-5dda2f630463a2504d9246be17449579bbc470904e137b02b3b5c44db033dec2688f6c477885de1485944d875ee62619b6e7c5d4d3657225951f6feaf83b4fa4  efl-1.27.0.tar.xz
+06f68701a3e652999a11ed10ef92c5dbaf7d93ceb82bfd9bddc120f8b87ac5730d3d282f63db8b915df6dcce525b493bccddb9c99cfdfe171997c88904d7aa92  efl-1.28.1.tar.xz
 "
