community/d-spy: upgrade to 48.0
https://gitlab.gnome.org/GNOME/d-spy/-/blob/48.0/NEWS

--- a/community/d-spy/APKBUILD
+++ b/community/d-spy/APKBUILD
@@ -1,14 +1,14 @@
 # Contributor: Michał Polański <michal@polanski.me>
 # Maintainer: Michał Polański <michal@polanski.me>
 pkgname=d-spy
-pkgver=47.0
+pkgver=48.0
 pkgrel=0
 pkgdesc="Like d-feet, but written in C and blisteringly fast"
 url="https://gitlab.gnome.org/GNOME/d-spy"
 license="GPL-3.0-or-later"
 arch="all"
 makedepends="meson desktop-file-utils glib-dev gtk4.0-dev libadwaita-dev"
-subpackages="$pkgname-dev $pkgname-lang"
+subpackages="$pkgname-lang"
 source="https://download.gnome.org/sources/d-spy/${pkgver%.*}/d-spy-$pkgver.tar.xz"
 options="!check" # no test suite
 
@@ -26,5 +26,5 @@ package() {
 }
 
 sha512sums="
-da5275691ab29ced7a125bf9411a8bae4388ea6f940c8e4f5a0764e18e9d1909abfe4d5c13e4cbd3405d106929bbbf6ba15f45c509d3396906311f5d453b2df2  d-spy-47.0.tar.xz
+aaea06f6ebdd93b3ab1fee8fd917600ae93aa90e35e0e8188eac614b10b043777021649e585150f973b5e0c079f1e94b10139758c6fe9e6d197f16192e1d44bd  d-spy-48.0.tar.xz
 "
