community/gjs: upgrade to 1.84.1, move maintainership to team/gnome
https://gitlab.gnome.org/GNOME/gjs/-/blob/1.84.1/NEWS

--- a/community/gjs/APKBUILD
+++ b/community/gjs/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
-# Maintainer: Natanael Copa <ncopa@alpinelinux.org>
+# Maintainer: team/gnome <fossdd@pwned.life>
 pkgname=gjs
 # even number after first dot are the stable releases
-pkgver=1.82.1
+pkgver=1.84.1
 pkgrel=0
 pkgdesc="GNOME javascript library"
 url="https://wiki.gnome.org/Projects/Gjs"
@@ -16,6 +16,7 @@ makedepends="
 	gobject-introspection-dev
 	gtk+3.0-dev
 	libffi>=3.3
+	lld
 	meson
 	mozjs-dev
 	"
@@ -24,15 +25,7 @@ subpackages="$pkgname-dev $pkgname-dbg"
 source="https://download.gnome.org/sources/gjs/${pkgver%.*}/gjs-$pkgver.tar.xz
 	encoding.patch
 	"
-
-case "$CARCH" in
-riscv64|s390x)
-	# lld broken on riscv64, disabled on s390x
-	;;
-*)
-	makedepends="$makedepends lld"
-	;;
-esac
+options="$options !check" # https://gitlab.gnome.org/GNOME/gjs/-/issues/681#note_2382535
 
 build() {
 	case "$CARCH" in
@@ -77,6 +70,6 @@ package() {
 }
 
 sha512sums="
-2e4e1ceee784d252cb0f6a5df9c9dd9a486112af9973e184d785cb4bcb06a5844e16ce51b8a46021220f2b6ead24186eb98cc15b836492f71922e8a80669b16f  gjs-1.82.1.tar.xz
+9a25a866bcfafcc1f8b3ab4ee7a4a26d8362fa91631d0fcf804ae8c6e09b06c70cff365c66a9192bdf91f1e1347ee452e5cd34065d2443f6597e3127f854b5f1  gjs-1.84.1.tar.xz
 3524a4c6772f1be1d6e2320650d7fb9f81cc2ceb7c79c2521c0ee7a4202d5681a88586ab9439050611ee1719f9a977bb65d0eaaa536148e7e4590baf1f50eae8  encoding.patch
 "
