--- a/community/gnome-connections/APKBUILD
+++ b/community/gnome-connections/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: knuxify <knuxify@gmail.com>
 # Maintainer: team/gnome <knuxify@gmail.com>
 pkgname=gnome-connections
-pkgver=47.2.1
+pkgver=48.0
 pkgrel=0
 pkgdesc="Remote desktop client for the GNOME desktop environment"
 url="https://apps.gnome.org/Connections"
@@ -23,8 +23,7 @@ makedepends="
 	"
 checkdepends="appstream-glib"
 subpackages="$pkgname-doc $pkgname-lang"
-source="https://gitlab.gnome.org/GNOME/connections/-/archive/$pkgver/connections-$pkgver.tar.gz"
-builddir="$srcdir/connections-$pkgver"
+source="https://download.gnome.org/sources/gnome-connections/${pkgver%.*}/gnome-connections-$pkgver.tar.xz"
 
 build() {
 	abuild-meson \
@@ -42,5 +41,5 @@ package() {
 }
 
 sha512sums="
-2a021ba167582001f8ef845f265ae8f2bfa0e2b6a3e6acc980d5f6cd11cab26f8771725ccb41e89461b277b955c53056ed8142c76361eb629961383d5006ce00  connections-47.2.1.tar.gz
+49e74d5c0a278e1669982da6f013a7c9c15d7fde8e9b46a6c6201ef618474d486f9e21e558804f0466317a8463bb55f7b8de2b205c976124e86463be7e0a1ff6  gnome-connections-48.0.tar.xz
 "
