--- a/community/sysprof/APKBUILD
+++ b/community/sysprof/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=sysprof
-pkgver=47.2
+pkgver=48.0
 pkgrel=0
 pkgdesc="System-wide profiler for Linux"
 url="http://www.sysprof.com/"
@@ -10,6 +10,7 @@ license="GPL-2.0-or-later"
 depends_dev="$pkgname=$pkgver-r$pkgrel" # sysprof's lib setup is a bit weird...
 makedepends="
 	desktop-file-utils
+	elfutils-dev
 	elogind-dev
 	glib-dev
 	gtk4.0-dev
@@ -44,5 +45,5 @@ package() {
 }
 
 sha512sums="
-3673b8035ba115f581c3d4d881a6ac99f15d96d461f5d0824d727cfb504ae41363c5b5e0fc117acd202b203c251bb514e53307799c1dbea1d2b0d320ed2fd104  sysprof-47.2.tar.xz
+f687907d616a7d67f605b7874f903714092e32937565206129ce43107205ad27d0e30d82c527e04e232e1420c3b2ff3f60618ba286e303ddd74d959b056be9bc  sysprof-48.0.tar.xz
 "
