community/qbs: upgrade to 2.6.0, take over maintainership
https://code.qt.io/cgit/qbs/qbs.git/tree/changelogs/changes-2.6.0.md

--- a/community/qbs/APKBUILD
+++ b/community/qbs/APKBUILD
@@ -1,6 +1,6 @@
-# Maintainer:
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=qbs
-pkgver=2.5.0
+pkgver=2.6.0
 pkgrel=0
 pkgdesc="Cross platform Qt build tool"
 url="https://wiki.qt.io/Qbs"
@@ -40,5 +40,5 @@ package() {
 }
 
 sha512sums="
-60bfbac4fa7435da93431be50603bb19fbdf7a5bafc8a3a1129b792d323cbd4e42c2fd7b7b24c30c8a4a2b4b01b65ac72c366e54e01e1c6da2699ff6dedaf35f  qbs-src-2.5.0.tar.gz
+dce9379d4968c98c711e1aeb8b6750c245848990cebcc1a05f9ec545d7fa39a54332cb988743c0e0fcfca1e2180c9ee82bf107f428e7b45dd293369804970b4d  qbs-src-2.6.0.tar.gz
 "
