testing/dodo: upgrade to 0_git20250313
https://github.com/akissinger/dodo/compare/b6c4b18be17685e2960171fd4438d90edd348c9d...c108dd93aa637ef757fa8d86cf210d37093f03ec

--- a/testing/dodo/APKBUILD
+++ b/testing/dodo/APKBUILD
@@ -1,8 +1,7 @@
-# Contributor: fossdd <fossdd@pwned.life>
-# Maintainer: fossdd <fossdd@pwned.life>
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=dodo
-pkgver=0_git20241007
-_commit=b6c4b18be17685e2960171fd4438d90edd348c9d
+pkgver=0_git20250313
+_commit=c108dd93aa637ef757fa8d86cf210d37093f03ec
 pkgrel=0
 pkgdesc="Graphical, hackable email client based on notmuch"
 url="https://github.com/akissinger/dodo"
@@ -39,5 +38,5 @@ package() {
 }
 
 sha512sums="
-c59348155b70bd8d1704a45f5b28bf08daca733f85730eca1983d7b6b0188590d92d7a319becc2792b1e949594d9d6bc4d868425ed24b7341bed729a6de21381  dodo-b6c4b18be17685e2960171fd4438d90edd348c9d.tar.gz
+b28d03ec10a1977741ae108a584f70f9e82be49c51db790e16db43eed55c3353d017494ec9015c8f993ec86de68b3e2dcd0c714f3630a3be40f7a0bd7d698aba  dodo-c108dd93aa637ef757fa8d86cf210d37093f03ec.tar.gz
 "
