testing/dodo: disable on armhf

--- a/testing/dodo/APKBUILD
+++ b/testing/dodo/APKBUILD
@@ -5,7 +5,7 @@ _commit=c108dd93aa637ef757fa8d86cf210d37093f03ec
 pkgrel=0
 pkgdesc="Graphical, hackable email client based on notmuch"
 url="https://github.com/akissinger/dodo"
-arch="noarch !riscv64 !s390x !ppc64le" # blocked by py3-pyqt6-webengine
+arch="noarch !riscv64 !s390x !ppc64le !armhf" # blocked by py3-pyqt6-webengine
 license="GPL-3.0-or-later"
 depends="
 	hicolor-icon-theme
