testing/*: enable on loongarch64

--- a/testing/elementary-camera/APKBUILD
+++ b/testing/elementary-camera/APKBUILD
@@ -5,8 +5,8 @@ pkgver=8.0.0
 pkgrel=0
 pkgdesc="Camera app designed for elementary OS"
 url="https://github.com/elementary/camera"
-# loongarch64, s390x: blocked by gst-plugins-rs-gtk4
-arch="all !loongarch64 !s390x"
+# s390x: blocked by gst-plugins-rs-gtk4
+arch="all !s390x"
 license="GPL-3.0-or-later"
 depends="gst-plugins-rs-gtk4"
 makedepends="
