--- a/testing/tanka/APKBUILD
+++ b/testing/tanka/APKBUILD
@@ -5,7 +5,7 @@ pkgrel=2
 pkgdesc="Flexible, reusable and concise configuration for Kubernetes"
 url="https://tanka.dev"
 # blocked by kubectl (kubernetes)
-arch="all !armhf !loongarch64"
+arch="all !armhf"
 license="Apache-2.0"
 depends="kubectl"
 makedepends="go"
