--- a/testing/tree-sitter-php/APKBUILD
+++ b/testing/tree-sitter-php/APKBUILD
@@ -4,7 +4,7 @@ pkgver=0.23.12
 pkgrel=0
 pkgdesc="PHP grammar for tree-sitter"
 url="https://github.com/tree-sitter/tree-sitter-php"
-arch="all"
+arch="all !ppc64le" # Relative namespace names test failed on builder
 license="MIT"
 makedepends="tree-sitter-dev"
 checkdepends="tree-sitter-cli"
