community/gcr4: upgrade to 4.4.0.1
https://download.gnome.org/sources/gcr/4.4/gcr-4.4.0.1.news

--- a/community/gcr4/APKBUILD
+++ b/community/gcr4/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Newbyte <newbyte@postmarketos.org>
 pkgname=gcr4
-pkgver=4.3.0
-pkgrel=1
+pkgver=4.4.0.1
+pkgrel=0
 pkgdesc="Library for bits of crypto UI and parsing"
 url="https://wiki.gnome.org/Projects/CryptoGlue"
 arch="all"
@@ -31,7 +31,9 @@ subpackages="
 	$pkgname-base
 	gcr-ssh-agent:ssh
 	"
-source="https://download.gnome.org/sources/gcr/${pkgver%.*}/gcr-$pkgver.tar.xz
+# upstream had to use x.x.x.x and not x.x.x
+#source="https://download.gnome.org/sources/gcr/${pkgver%.*}/gcr-$pkgver.tar.xz
+source="https://download.gnome.org/sources/gcr/${pkgver%.*.*}/gcr-$pkgver.tar.xz
 	gcr-ssh-agent-wrapper
 	gcr-ssh-agent.desktop
 	30-gcr-ssh-agent.sh"
@@ -82,7 +84,7 @@ ssh() {
 }
 
 sha512sums="
-3f252de55e07d47a49c03b714e323ceb00d82e010fe1bb606073e3188bf8bef84359a322ed6fe843620fa5d108e825dd7e9a60136c8a0e802b8f2178aa87b164  gcr-4.3.0.tar.xz
+f84724e0e9850c6150ec93430a0c3a714f4b4376df2fd3fd68340463acf04d89de236510b40bab4f3dc8fd82a2e8dc98b53c2684df07fdb9a6a3528ed35652d1  gcr-4.4.0.1.tar.xz
 d2b73edb885e7adcad7ec5117cbbb1d0a1b9139aed8c21923dcca22ca6af2b96d5e66ec0c966e1a219730e3fdc0d5866b40797377e9f0e394db8fdda16933625  gcr-ssh-agent-wrapper
 90eefba939cc52b4251b4682dc8702d9a7f87ca2abd77b0caccd8fb0707692bc9fee9c23703388cb5336c1047731a4c6175423a03b05b1cf644c73040d0e244a  gcr-ssh-agent.desktop
 f92d098db8146bdcacb7cc47b9ad5e9151cd1b26e786dfc164fe8c2941ded4f540e6458aedb0189ce52d49c46f7058bab86b9e02aae35962a487332503fb60ff  30-gcr-ssh-agent.sh
