community/rustypaste-cli: upgrade to 0.9.3 && enable on loongarch64

--- a/community/rustypaste-cli/APKBUILD
+++ b/community/rustypaste-cli/APKBUILD
@@ -1,12 +1,11 @@
 # Contributor: Orhun Parmaksız <orhunparmaksiz@gmail.com>
 # Maintainer: Orhun Parmaksız <orhunparmaksiz@gmail.com>
 pkgname=rustypaste-cli
-pkgver=0.9.2
+pkgver=0.9.3
 pkgrel=0
 pkgdesc="CLI tool for rustypaste"
 url="https://github.com/orhun/rustypaste-cli"
-# loongarch64: blocked by libc crate
-arch="all !loongarch64"
+arch="all"
 license="MIT"
 makedepends="cargo cargo-auditable"
 subpackages="$pkgname-doc"
@@ -34,5 +33,5 @@ package() {
 }
 
 sha512sums="
-e74caffdb1413b8330d08ea9d45b7214fff046602c71df6eb4ef76c5d990cb4cfdda9b965586b8b635cea6b9a820df872221e61750fdc3bdababa519a38ac7b7  rustypaste-cli-0.9.2.tar.gz
+6e9f4536876ccea68c70af5a3e7934eacdd28741e5c92d69262dd80da811b055bd6a87bbcece291c77806bec93153d34159ac9392b38f088d5cdac840c455cc2  rustypaste-cli-0.9.3.tar.gz
 "
