--- a/community/mutter/APKBUILD
+++ b/community/mutter/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: team/gnome <pabloyoyoista@postmarketos.org>
 pkgname=mutter
 pkgver=48.0
-pkgrel=0
+pkgrel=1
 pkgdesc="clutter-based window manager and compositor"
 url="https://wiki.gnome.org/Projects/Mutter/"
 arch="all"
@@ -70,6 +70,7 @@ subpackages="$pkgname-dbg $pkgname-dev $pkgname-doc $pkgname-lang $pkgname-schem
 source="https://download.gnome.org/sources/mutter/${pkgver%.*}/mutter-$pkgver.tar.xz
 	fixudev-req.patch
 	pcversion.patch
+	fix-freeze.patch
 	"
 
 build() {
@@ -102,4 +103,5 @@ sha512sums="
 48abd37a7b622835ccc9a5ca5aaa007744bd0a91764752ae64fc8385b0df700f58bdba11b7145d6bbc15649c84356c5f6107974c696c619cc272a939cb9743e3  mutter-48.0.tar.xz
 60eb075a88ca301470130d17371c1410220be0c7d5a929f6b528ec838a1133ebccf46d29f448060043e94c2edf4615ae431927911bede1972ac37f04ff9f29b4  fixudev-req.patch
 ec94fdecb7a3213903d013c1e6f48e02f8a1972ded16c3604627984cfce0936a0276d284c20e746eb91bf97249785bcf827f6fa55f1629e5290e19423d554e4d  pcversion.patch
+b7d0bea395c47558a089f75c2c30ac04da2ffc60d044364653098dcb30302aeeb839631fc51c5b5673d11f07fe85af645ea6fe9b2ebe107f8fc67541d5a8e3eb  fix-freeze.patch
 "
