--- a/community/gpgme/APKBUILD
+++ b/community/gpgme/APKBUILD
@@ -2,11 +2,11 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gpgme
 pkgver=1.24.2
-pkgrel=0
+pkgrel=1
 pkgdesc="gnupg made easy"
 url="https://www.gnupg.org/related_software/gpgme/"
 arch="all"
-license="LGPL-2.1-or-later GPL-3.0-or-later"
+license="LGPL-2.1-or-later AND GPL-3.0-or-later"
 # NOTE: gpgme needs at least gpg or gpgsm, but most programs use only gpg.
 # Some packages depending on gpgme need more GnuPG components (e.g.
 # gnupg-dirmngr); these must be explicitly defined in the package's depends
