--- a/community/psad/APKBUILD
+++ b/community/psad/APKBUILD
@@ -2,11 +2,11 @@
 # Maintainer: Stuart Cardall <developer@it-offshore.co.uk>
 pkgname=psad
 pkgver=2.4.6
-pkgrel=3
+pkgrel=4
 pkgdesc="3 lightweight system daemons that analyze iptables log messages to detect port scans and other suspicious traffic"
 url="https://cipherdyne.org/psad/"
 arch="all"
-license="GPL"
+license="GPL-2.0-or-later"
 options="!check" # tests require a built pkg
 depends="perl iptables ssmtp mailx psmisc perl-bit-vector
 	perl-date-calc perl-iptables-chainmgr perl-iptables-parse perl-net-ipv4addr
