community/py3-typogrify: upgrade to 2.1.0
https://github.com/mintchaos/typogrify/compare/2.0.7...justinmayer:typogrify:2.1.0

Ref https://github.com/mintchaos/typogrify/commit/cdb646f631c95576745c1611ae817d5d0316919a

--- a/community/py3-typogrify/APKBUILD
+++ b/community/py3-typogrify/APKBUILD
@@ -1,16 +1,16 @@
 # Contributor: Patrycja Rosa <alpine@ptrcnull.me>
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=py3-typogrify
-pkgver=2.0.7
-pkgrel=4
+pkgver=2.1.0
+pkgrel=0
 pkgdesc="Filters to enhance web typography, including support for Django & Jinja templates"
-url="https://github.com/mintchaos/typogrify"
+url="https://github.com/justinmayer/typogrify"
 arch="noarch"
-license="BSD"
+license="BSD-3-Clause"
 depends="smartypants"
-makedepends="py3-setuptools py3-gpep517 py3-wheel"
+makedepends="py3-gpep517 py3-hatchling py3-wheel"
 subpackages="$pkgname-pyc"
-source="https://github.com/mintchaos/typogrify/archive/$pkgver/py3-typogrify-$pkgver.tar.gz"
+source="https://github.com/justinmayer/typogrify/archive/$pkgver/py3-typogrify-$pkgver.tar.gz"
 builddir="$srcdir/typogrify-$pkgver"
 options="!check" # no test suite provided
 
@@ -26,5 +26,5 @@ package() {
 }
 
 sha512sums="
-72abbf4d374ec7ac4765ad12e8592b8d3208e2c951bc102ccdeaf016d624a063824d951489a30eed136ce0c8071b9b23cc5484b61a9ab6e6fd3126b2601fca29  py3-typogrify-2.0.7.tar.gz
+f497cd80352cf1ae5a5e7d1ba41f12abb06c22b9fae7e26fd9fe5a9acbb238bd303a5c90a2d77c83bd0d1fa25aec2aa7dfec2856543f54456650cddf4fa090e0  py3-typogrify-2.1.0.tar.gz
 "
