testing/tanidvr: modernize

--- a/testing/tanidvr/APKBUILD
+++ b/testing/tanidvr/APKBUILD
@@ -2,34 +2,26 @@
 # Maintainer: Valery Kartel <valery.kartel@gmail.com>
 pkgname=tanidvr
 pkgver=1.4.1
-pkgrel=1
+pkgrel=2
 pkgdesc="a CLI tool for accessing DVRs and IP cameras based on the proprietary DVR-IP protocol (port 37777/TCP)"
 url="https://tanidvr.sourceforge.net/"
 arch="all"
-license="GPL-3.0"
-depends=
-depends_dev=
-makedepends=
-install=
+license="GPL-3.0-or-later"
 subpackages="$pkgname-dhav2mkv"
-source="https://downloads.sourceforge.net/project/$pkgname/TaniDVR/$pkgname-$pkgver/$pkgname-$pkgver.tar.bz2"
-builddir="$srcdir"/$pkgname-$pkgver
+source="https://downloads.sourceforge.net/project/tanidvr/TaniDVR/tanidvr-$pkgver/tanidvr-$pkgver.tar.bz2"
 
 build() {
-	cd "$builddir"
-	./configure --prefix=/usr || return 1
-	make || return 1
+	./configure --prefix=/usr
+	make
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 }
 
 dhav2mkv() {
 	pkgdesc="a CLI tool for converting .dhav/.dav video files only playable with the proprietary Dahua player"
-	install -d "$subpkgdir"/usr/bin
-	mv "$pkgdir"/usr/bin/dhav2mkv "$subpkgdir"/usr/bin
+	amove usr/bin/dhav2mkv
 }
 
 sha512sums="49d5416a754b9d5ab80ad02d516bf842b8f6eeb69d2bd72f529ade226de573a3fea77774d0467edce5518f2cd02963d6e9c75eceeb42e47af60212184eaf7c39  tanidvr-1.4.1.tar.bz2"
