--- a/community/octave/APKBUILD
+++ b/community/octave/APKBUILD
@@ -8,7 +8,8 @@ pkgrel=0
 pkgdesc="A high-level language, primarily intended for numerical computations"
 url="https://www.gnu.org/software/octave/"
 # ppc64le: tests fail, segfault in sparse/eigs.m
-arch="all !ppc64le"
+# riscv64: blocked by qrupdate
+arch="all !ppc64le !riscv64"
 license="GPL-3.0-or-later"
 makedepends="
 	arpack-dev
