--- a/testing/zfsbootmenu/APKBUILD
+++ b/testing/zfsbootmenu/APKBUILD
@@ -5,7 +5,9 @@ pkgrel=1
 pkgdesc="ZFS Bootloader for root-on-ZFS systems, this aport is work in progress"
 #pkgdesc="ZFS Bootloader for root-on-ZFS systems with support for snapshots and native full disk encryption"
 url="https://zfsbootmenu.org/"
-arch="all !riscv64" # riscv64 blocked by dracut & kexec-tools
+# riscv64: blocked by dracut & kexec-tools
+# armhf: blocked by dracut
+arch="all !riscv64 !armhf"
 license="MIT"
 depends="bash
 	fzf
