testing/pimsync: upgrade to 0.4.1

--- a/testing/pimsync/APKBUILD
+++ b/testing/pimsync/APKBUILD
@@ -1,12 +1,10 @@
 maintainer="Hugo Osvaldo Barrera <hugo@whynothugo.nl>"
 pkgname=pimsync
-pkgver=0.3.0
+pkgver=0.4.1
 pkgrel=0
 pkgdesc="Synchronise calendars and contacts using CalDAV, CardDAV and others"
 url="https://pimsync.whynothugo.nl/"
-# s390x: nix/libc crate
-# loongarch64: blocked by libc crate
-arch="all !s390x !loongarch64"
+arch="all"
 license="EUPL-1.2"
 makedepends="cargo sqlite-dev scdoc"
 subpackages="
@@ -37,5 +35,5 @@ package() {
 }
 
 sha512sums="
-1611c098ccd882603b57047cc2755334e4e1cb2a9bd124fc4490b040fcf349a26470f2464fca69d1ce5f173cc80ea284aae81a92ca0e8cc42a3871ff6796fade  pimsync-0.3.0.tar.gz
+c1703f5dc9f843004401e2c0800c0799bf859ece207bd8d823dd87aab1359dbe02622956bab7a54ad932e1049de37d2347b73bf7919536096238180ed97c2de0  pimsync-0.4.1.tar.gz
 "
