community/wlr-randr: add -doc subpackage

--- a/community/wlr-randr/APKBUILD
+++ b/community/wlr-randr/APKBUILD
@@ -2,12 +2,13 @@
 # Maintainer: Michał Polański <michal@polanski.me>
 pkgname=wlr-randr
 pkgver=0.5.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Utility to manage outputs of a Wayland compositor"
 url="https://gitlab.freedesktop.org/emersion/wlr-randr"
 license="MIT"
 arch="all"
-makedepends="meson wayland-dev"
+makedepends="meson wayland-dev scdoc"
+subpackages="$pkgname-doc"
 source="https://gitlab.freedesktop.org/emersion/wlr-randr/-/archive/v$pkgver/wlr-randr-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check" # no test suite
