testing/cosmic-comp: add patch to fix crash on some ARM platforms
Patch was merged upstream but is not yet in a release:
https://github.com/pop-os/cosmic-comp/pull/1308

--- a/testing/cosmic-comp/APKBUILD
+++ b/testing/cosmic-comp/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=cosmic-comp
 pkgver=1.0.0_alpha6
 _upstreamver="${pkgver/_alpha/-alpha.}"
-pkgrel=0
+pkgrel=1
 pkgdesc="Compositor for the COSMIC Desktop Environment"
 url="https://github.com/pop-os/cosmic-comp"
 arch="aarch64 x86_64"
@@ -21,7 +21,10 @@ makedepends="
 	wayland-dev
 "
 options="net"  # fetch dependencies
-source="$pkgname-$pkgver.tar.gz::https://github.com/pop-os/cosmic-comp/archive/refs/tags/epoch-$_upstreamver.tar.gz"
+source="
+	$pkgname-$pkgver.tar.gz::https://github.com/pop-os/cosmic-comp/archive/refs/tags/epoch-$_upstreamver.tar.gz
+	0001-kms-protect-against-potential-overflow-of-Duration-w.patch
+"
 builddir="$srcdir/$pkgname-epoch-$_upstreamver"
 
 prepare() {
@@ -43,4 +46,5 @@ package() {
 
 sha512sums="
 ac2a2099ce87a12145d0f66bc9f5cead1465542d9b646719e21bc485089fa921edde3c5c8001e7ddd3df136b7e1a54b1f70b0b19471beb54c74771cc3bc0acd8  cosmic-comp-1.0.0_alpha6.tar.gz
+f142086f00a7cd904233f2b05592c83f8b0d4c613d700572528f3a03b76cc8f7545a730d8e2e0d4b61122853d26dde7e2ad59c3764bc4cf4430d49b58360b79c  0001-kms-protect-against-potential-overflow-of-Duration-w.patch
 "
