--- a/community/greetd/APKBUILD
+++ b/community/greetd/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Sean McAvoy <seanmcavoy@gmail.com>
 pkgname=greetd
 pkgver=0.10.3
-pkgrel=6
+pkgrel=7
 pkgdesc="Minimal and flexible login manager daemon"
 url="https://git.sr.ht/~kennylevinsen/greetd"
 # s390x: no desktop on this arch
@@ -76,7 +76,7 @@ agreety() {
 
 agreety_config() {
 	pkgdesc="$pkgname config for agreety"
-	depends="$pkgname=$pkgver-r$pkgrel cage !$pkgname-gtkgreet-config"
+	depends="$pkgname=$pkgver-r$pkgrel !$pkgname-gtkgreet-config"
 	install_if="$pkgname=$pkgver-r$pkgrel $pkgname-agreety"
 	amove etc/greetd/config.toml
 }
