testing/dumb_runtime_dir: make it work out-of-the-box
By changing the default parent directory in which XDG_RUNTIME_DIRs
are created from /run/user (which doesn't exist by default and needs
to be created by the user *with the right permissions*) to /run which
exists.

So now the default is `/run/$UID` we could also patch the code to
call the directory `/run/user-$UID`, if desired.

--- a/testing/dumb_runtime_dir/APKBUILD
+++ b/testing/dumb_runtime_dir/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Marten Ringwelski <git+alpine@maringuu.de>
 pkgname=dumb_runtime_dir
 pkgver=1.0.4
-pkgrel=3
+pkgrel=4
 pkgdesc="Creates an XDG_RUNTIME_DIR on login and never removes it"
 url="https://github.com/ifreund/dumb_runtime_dir"
 arch="all"
@@ -12,7 +12,16 @@ source="https://github.com/ifreund/dumb_runtime_dir/archive/v$pkgver/dumb_runtim
 options="!check" # no test suite
 
 build() {
-	make
+	# Create XDG_RUNTIME_DIRs directly in /run, the default is /run/user/,
+	# which would mean the user has to create it manualy with the right
+	# permissions.
+	#
+	# Without this change, dumb_runtime_dir does not work out-of-the-box.
+	# In the future OpenRC may create /run/user from bootmisc [1]. Or, we
+	# could patch the code to create the directory as /run/user-$UID.
+	#
+	# [1]: https://github.com/OpenRC/openrc/issues/658
+	make RUNTIME_DIR_PARENT=/run
 }
 
 package() {
