community/firefox: enable on riscv64

--- a/community/firefox/APKBUILD
+++ b/community/firefox/APKBUILD
@@ -9,8 +9,7 @@ pkgdesc="Firefox web browser"
 url="https://www.firefox.com/"
 # s390x blocked by lld
 # armhf: https://bugzilla.mozilla.org/show_bug.cgi?id=1680495
-# riscv64: vpx symbol is missing #15412
-arch="x86_64 armv7 aarch64 x86 ppc64le loongarch64"
+arch="all !s390x !armhf"
 license="GPL-3.0-only AND LGPL-2.1-only AND LGPL-3.0-only AND MPL-2.0"
 # ffmpeg 6 -> 112
 depends="
