community/monado: set it as default OpenXR runtime

--- a/community/monado/APKBUILD
+++ b/community/monado/APKBUILD
@@ -1,8 +1,7 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-# Maintainer: Bart Ribbers <bribbers@disroot.org>
+maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=monado
 pkgver=24.0.0
-pkgrel=2
+pkgrel=3
 pkgdesc="The open source OpenXR runtime"
 url="https://monado.freedesktop.org"
 # ppc64le, s390x blocked by opencv -> vtk -> netcdf
@@ -52,6 +51,9 @@ check() {
 
 package() {
 	DESTDIR="$pkgdir" cmake --install build
+
+	mkdir -p "$pkgdir"/etc/xdg/openxr/1
+	ln -s /usr/share/openxr/1/openxr_monado.json "$pkgdir"/etc/xdg/openxr/1/active_runtime.json
 }
 
 sha512sums="
