community/fluidsynth: make -libs subpackage depend on soundfont-timgm
In this package, soundfont-timgm is used as the DEFAULT_SOUNDFONT /
synth.default-soundfont [1]. As such, code using fluidsynth as a library
will also need to have that soundfont installed. Otherwise, code
depending on the file referenced by synth.default-soundfont, e.g.
OpenTTD [2], will not work correctly.

Other distributions, e.g. Debian, therefore also track soundfont-timgm
as a dependency of libfluidsynth [3].

[1]: https://www.fluidsynth.org/api/settings_synth.html#settings_synth_default-soundfont
[2]: https://github.com/OpenTTD/OpenTTD/blob/14.1/src/music/fluidsynth.cpp#L92
[3]: https://salsa.debian.org/multimedia-team/fluidsynth/-/blob/257e51c96a7bc6503a1906ff70293f0c0549273c/debian/control#L62

--- a/community/fluidsynth/APKBUILD
+++ b/community/fluidsynth/APKBUILD
@@ -1,12 +1,12 @@
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=fluidsynth
 pkgver=2.4.4
-pkgrel=0
+pkgrel=1
 arch="all"
 url="https://www.fluidsynth.org/"
 pkgdesc="A real-time software synthesizer based on the SoundFont 2 specifications"
 license="LGPL-2.1-or-later"
-depends="soundfont-timgm"
+depends_libs="soundfont-timgm"
 makedepends="
 	alsa-lib-dev
 	cmake
