community/kubie: enable on loongarch64

--- a/community/kubie/APKBUILD
+++ b/community/kubie/APKBUILD
@@ -4,8 +4,8 @@ pkgver=0.25.1
 pkgrel=0
 pkgdesc="A more powerful alternative to kubectx and kubens"
 url="https://github.com/sbstp/kubie"
-# loongarch64, s390x: fails to build nix crate
-arch="all !loongarch64 !s390x"
+# s390x: fails to build nix crate
+arch="all !s390x"
 license="Zlib"
 subpackages="$pkgname-bash-completion $pkgname-fish-completion"
 makedepends="
