community/commons-daemon: enable on loongarch64

--- a/community/commons-daemon/APKBUILD
+++ b/community/commons-daemon/APKBUILD
@@ -5,8 +5,8 @@ pkgver=1.4.1
 pkgrel=0
 pkgdesc="Tools to allow Java programs to run as UNIX daemons"
 url="https://commons.apache.org/daemon/"
-# riscv64 and loongarch64 blocked by java-jdk
-arch="all !riscv64 !loongarch64"
+# riscv64 blocked by java-jdk
+arch="all !riscv64"
 license="Apache-2.0"
 options="!check" # No test suite
 depends="java-jre-headless"
