--- a/community/gnome-remote-desktop/APKBUILD
+++ b/community/gnome-remote-desktop/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: team/gnome <pabloyoyoista@postmarketos.org>
 pkgname=gnome-remote-desktop
-pkgver=47.3
+pkgver=48.0
 pkgrel=0
 pkgdesc="GNOME Remote Desktop - remote desktop server"
 url="https://gitlab.gnome.org/GNOME/gnome-remote-desktop"
@@ -23,6 +23,7 @@ makedepends="
 	libgudev-dev
 	libnotify-dev
 	libsecret-dev
+	libva-dev
 	libvncserver-dev
 	libxkbcommon-dev
 	mesa-dev
@@ -30,11 +31,13 @@ makedepends="
 	opus-dev
 	pipewire-dev
 	polkit-dev
+	shaderc
 	tpm2-tss-dev
 	tpm2-tss-esys
 	tpm2-tss-mu
 	tpm2-tss-rc
 	tpm2-tss-tctildr
+	vulkan-loader-dev
 	"
 checkdepends="
 	adwaita-icon-theme
@@ -69,5 +72,5 @@ package() {
 }
 
 sha512sums="
-6a2da7fd3c09d47594eee53146fcc9c467844ce4d0282b4fb88f265016e3fd11f7ee5629cc70164427c024ad91b07021d5a5b9f771e983accc6019c17a0c5f7f  gnome-remote-desktop-47.3.tar.xz
+0c892253d91dafb588039b16b4f390d9b4c19ba93428653e6b843baf137c1b48c3116230915d344494942b55f4aef89834772a89082eadb6d87196430d97f537  gnome-remote-desktop-48.0.tar.xz
 "
