testing/niri: take over maintainership
the original maintainer/contributor said [1] that they weren't
using/maintaining the package anymore.

[1]: https://gitlab.alpinelinux.org/alpine/aports/-/merge_requests/80666#note_486583

--- a/testing/niri/APKBUILD
+++ b/testing/niri/APKBUILD
@@ -1,8 +1,8 @@
-# Contributor: Ogromny <ogromnycoding@gmail.com>
-# Maintainer: Ogromny <ogromnycoding@gmail.com>
+# Contributor: Pedro Lucas Porcellis <porcellis@eletrotupi.com>
+# Maintainer: Pedro Lucas Porcellis <porcellis@eletrotupi.com>
 pkgname=niri
 pkgver=25.02
-pkgrel=0
+pkgrel=1
 pkgdesc="A scrollable-tiling Wayland compositor"
 url="https://github.com/YaLTeR/niri"
 arch="x86_64 ppc64le aarch64"
