--- a/community/chromium/APKBUILD
+++ b/community/chromium/APKBUILD
@@ -2,9 +2,9 @@
 # Contributor: Elly Fong-Jones <elly@elly.town>
 # Maintainer: lauren n. liberda <lauren@selfisekai.rocks>
 pkgname=chromium
-pkgver=134.0.6998.117
-pkgrel=1
-_copium_tag=134.0
+pkgver=135.0.7049.52
+pkgrel=0
+_copium_tag=135.0
 # DEPS file -> deps['src/third_party/test_fonts']['objects'][0]['object_name']
 # (for the given version, when it changes)
 _testfonts=336e775eec536b2d785cc80eff6ac39051931286
@@ -93,7 +93,7 @@ makedepends="
 	pulseaudio-dev
 	py3-setuptools
 	python3
-	qt5-qtbase-dev
+	qt6-qtbase-dev
 	re2-dev
 	rust
 	rust-bindgen
@@ -110,7 +110,7 @@ makedepends="
 	"
 checkdepends="py3-six"
 subpackages="
-	$pkgname-qt5
+	$pkgname-qt6
 	$pkgname-chromedriver
 	$pkgname-doc
 	$pkgname-lang
@@ -129,7 +129,7 @@ source="https://commondatastorage.googleapis.com/chromium-browser-official/chrom
 	disable-dns_config_service.patch
 	disable-failing-tests.patch
 	fc-cache-version.patch
-	fix-opus.patch
+	fix-ffmpeg-codec-list.patch
 	fstatat-32bit.patch
 	gdbinit.patch
 	generic-sensor-include.patch
@@ -141,16 +141,18 @@ source="https://commondatastorage.googleapis.com/chromium-browser-official/chrom
 	no-res-ninit-nclose.patch
 	no-sandbox-settls.patch
 	partalloc-no-tagging-arm64.patch
+	pipewire-1.4.patch
 	pvalloc.patch
 	temp-failure-retry.patch
-	pipewire-1.4.patch
 	"
 _copium_patches="
 	cr131-v8-non4k-pages.patch
 	cr133-ffmpeg-no-noh264parse.patch
 	cr133-is-musl-libcxx.patch
-	cr133-mv2-still-not-dead.patch
 	cr134-unbundle-simdutf.patch
+	cr135-musl-libcxx-strtoll_l.patch
+	cr135-mv2-still-not-dead.patch
+	cr135-unbundle-simdutf-v8-fix.patch
 	"
 # chrome-sandbox can use suid when user namespaces aren't available, but uses only userns and drops privileges normally
 options="suid"
@@ -698,6 +700,7 @@ _configure() {
 		is_musl=true
 		is_official_build=true
 		link_pulseaudio=true
+		moc_qt6_path=\"/usr/lib/qt6/libexec\"
 		proprietary_codecs=true
 		removed_rust_stdlib_libs=[\"adler2\"]
 		rtc_link_pipewire=true
@@ -710,7 +713,7 @@ _configure() {
 		treat_warnings_as_errors=false
 		use_custom_libcxx=true
 		use_lld=true
-		use_qt5=true
+		use_qt6=true
 		use_pulseaudio=true
 		use_safe_libstdcxx=false
 		use_system_libffi=true
@@ -729,9 +732,6 @@ build() {
 
 	# final link needs lots of file descriptors
 	ulimit -n 4096
-
-	# moc and friends not in path by default
-	export PATH="$PATH:/usr/lib/qt5/bin"
 
 	# shellcheck disable=2046
 	ninja -C out/bld \
@@ -784,8 +784,8 @@ package() {
 	install -Dm4755 chrome_sandbox "$pkgdir"/usr/lib/$pkgname/chrome-sandbox
 	install -Dm755 chrome_crashpad_handler -t "$pkgdir"/usr/lib/$pkgname/
 
-	# qt5
-	install -Dm755 libqt5_shim.so -t "$pkgdir"/usr/lib/$pkgname/
+	# qt6
+	install -Dm755 libqt6_shim.so -t "$pkgdir"/usr/lib/$pkgname/
 
 	# chromedriver
 	install -Dm755 chromedriver.unstripped "$pkgdir"/usr/lib/$pkgname/chromedriver
@@ -864,10 +864,10 @@ package() {
 		"$pkgdir"/usr/share/metainfo/chromium.appdata.xml
 }
 
-qt5() {
-	pkgdesc="chromium qt5 shim"
+qt6() {
+	pkgdesc="chromium qt6 shim"
 
-	amove usr/lib/$pkgname/libqt5_shim.so
+	amove usr/lib/$pkgname/libqt6_shim.so
 }
 
 chromedriver() {
@@ -899,19 +899,19 @@ swiftshader() {
 }
 
 sha512sums="
-99aa5c7e20640d5735ee77f38bd71c6b99b5429e65921813a1bf31d6491ef92c1bb6b20572684bb1747f9d05000944d889e62f68d9b043e452ff7cd16582ee33  chromium-134.0.6998.117.tar.xz
-6445ab8a2e7efae2862a050cef12a0169d0e9f1d1b0853dccaffb438be20d6d442b11f83752e63baba4dae210097f51285493ccb5aba14350df05abc2a5c7fe4  chromium-134.0.6998.117-testdata.tar.xz
+3c5ccd1e044f670bc1d4449ad9a4f616f211a66957c8e7792a698bce63d6da5ea5fc238f427583a1722830d03043293848b9c07856430410708f66349ac12dce  chromium-135.0.7049.52.tar.xz
+5eb4aba73a2bddf325217f7e4ae89aab46511777e2e4d327bdff9fb1f995e6319f912abfdaf3fefa870cd8f938fd9c33b81d627619bae835ebc8f4f9300180fa  chromium-135.0.7049.52-testdata.tar.xz
 bbc928e99ebcd4d953b982688b01526cb754bad018f67be9e777a4f8ac51cdd3e01374e5a63faf55b12e7cee0d52816c88062e012b5bcc4f9bb41f28d8e0b7f7  test_fonts-336e775eec536b2d785cc80eff6ac39051931286.tar.gz
-c1857b5d6975650f915f3db552666f521822b857e39958ccfb54129f3878f272deaafc3dd446bc8441a5e84f075791feeeb62841b74bb555d8c546bfe231d164  copium-134.0.tar.gz
+47d0fc8e974f002965592b352ce268cf64c5d302829b35577545e3a1041651d4f669908c7ace55c6c128c179ff4b74bb936598d2c5759ee95468f4657fd7abcd  copium-135.0.tar.gz
 1b16564f85a03f3eb934ec51289dc6159e2454202d40f48354f947d6ceffac8889e9eb4c0f4dfaafb3a15101566d54039f832bc9a8433c3c463e2d1dac2d2acc  chromium-launcher.sh
 9cfcb41d69c5a515b6f9fe2a629579fa499e1f48eb58a0ce4ec8e5029d450bcafb6d963019aaac9a6838244bee9f9ba7fe5ef6146a0ca6b20fcda4ab7f059476  chromium.conf
 2d8237a940ea691bd10b08315429677a587f7ef9692a0cca53bfd066eae82998a6c71f402a8669e9de39f94d7f3280745d1628ea6eac5d76ca7116844d4e0dac  google-api.keys
 29bb685e03356a77df5fd347cdf55194cc8b3265c421cc76e54d64edefc329dbcb052deb26b22e8f587ce68456876c071de1b7d258dd0fcc6ee66c875ec4a020  chromium-revert-drop-of-system-java.patch
-d9cc4a37a0311d23ae315a8d8124f8dbf60db8cc4a3943818638174b20387f1d770d00871f6608957b246ad956abca43c22ea0b072724287f2947e1909e47323  compiler.patch
+6ab8a945f581bf990f93b23d83aca94c5f40d4f91270ef8e65acd4b19bbc47437d8081eac0e27243425cdd87044d6b176ae6bafefe02a53a64b8ecee3f44a92b  compiler.patch
 4057cc78f10bfd64092bc35a373869abb1d68b880cdbca70422f39ffd78a929c19c7728d4d4c40709aaba25581148a93ae5343e724849fd35323062ed68753fa  disable-dns_config_service.patch
 2470904846e3adde2c9506f9e78220daca0932320b628dd3d427bf2b7c17a8f7880cb97e787b046c28de7aca642e1a8d30824d6049905976da77e7473baa64da  disable-failing-tests.patch
 5fc5c012c1db6cf1ba82f38c6f3f4f5ca3a209e47ac708a74de379b018e0649b7694877c9571ef79002dde875ffc07b458a3355425f1c01867f362c66c2bc1bf  fc-cache-version.patch
-f7fe8a8e5eee17310fb4c3e5de621b4b89ea0567f75033c65be970950cca62b50c5fbd004735e4ad39bdb2e1638b3b73ea614203d323f8181ae18c71edf302a0  fix-opus.patch
+4213a67b2d2f3de2ac980d3ae11dffcc006ddbabdc1bef4d4787e5b596642120a5ac63dd602c75680714ca55e1b6eda47cf57625e888ff806b05c96dd1a0c384  fix-ffmpeg-codec-list.patch
 c63dee5044353eb306a39ca1526158c0f003ab310ecb03d1c368dc2a979454590c84b8d3c15484517d5e66bb8add9b231da9abbadf2e50850abd72ac1345c4ab  fstatat-32bit.patch
 33ee60863cc438ef57ffef92ba4cf67a856a5ffc16138bce241bcf87e47b15154aa86918e793c26f7ec4dc62a445257ad5673ed7001daf22c4043cf6cc57da7f  gdbinit.patch
 36a764fa73443b47d38050b52dbe6ad2fa8d67201ff4ccdbad13b52308ef165ca046aac6f9609fe35890a6485f0f3e672e78cc41e3e44f3cdc7f145e540524e8  generic-sensor-include.patch
@@ -923,7 +923,7 @@ a250cff50d282b02ce0f28880d0a2b4fb8e7df51bc072bfeeddc561c29a7c76453dbcbc7b17b8296
 e4c4e5bc6f828f9c883dd418c0ba01887949c29c311f76206a1ec29f620b0c0ba0452949dc2778a9c46ea066405857536964a36436a68eecf7da7952736333cf  no-res-ninit-nclose.patch
 6dc4d8dc92e685dace62265a1ddb3aebc558aed54d20ff6d36b030be0c48d7e84662326c31363612492574d9a03c62653cdc21a60995b97dee1d75cae86a9f9b  no-sandbox-settls.patch
 f2b08538ff57c50b3772a07ca91845f9d45f4a5112f608b6192d4fb5d7be48f478c0c36194d95ab7bbf933e0278e5c6d578619d8643895cdc40386eebc5b975f  partalloc-no-tagging-arm64.patch
+1814096bc611e7f56cc5c570214dae715a4cda1fba96a6b585a73a1abc8b9161efaa799dc83887dac531dbafe9479bbe235cabe1a61cb3081e268c53a6144908  pipewire-1.4.patch
 03f829a2da633533ef3fd0f287f5ec602d936a97a98b53cd2415553c2537ae9d571f35397ca7c9fb3f4b0806c300e3b189569f8d979ca132e1a2a4dae7206396  pvalloc.patch
 e48693e6b7aeebf69a5acbf80d9a35defe4c23835121dfeb58b051ac7c527e758a41004f4d193274fe1b01c0bfb1dbc77b09cb6a404a3fdee507a2918afb0edb  temp-failure-retry.patch
-1814096bc611e7f56cc5c570214dae715a4cda1fba96a6b585a73a1abc8b9161efaa799dc83887dac531dbafe9479bbe235cabe1a61cb3081e268c53a6144908  pipewire-1.4.patch
 "
