--- a/testing/anubis/APKBUILD
+++ b/testing/anubis/APKBUILD
@@ -1,15 +1,14 @@
 maintainer="fossdd <fossdd@pwned.life>"
 pkgname=anubis
-pkgver=1.10.0_git20250303
-pkgrel=1
-_commit=19f0d3d0c1b171ebc25176f777d034ffaa98a4be
+pkgver=1.13.0
+pkgrel=0
 pkgdesc="Block AI scrapers using a sha256 proof-of-work challenge"
-url="https://github.com/Xe/x/tree/master/cmd/anubis"
+url="https://github.com/TecharoHQ/anubis"
 arch="all"
-license="CC0-1.0"
+license="MIT"
 makedepends="go"
-source="$pkgname-$pkgver.tar.gz::https://github.com/Xe/x/archive/$_commit.tar.gz"
-builddir="$srcdir/x-$_commit"
+subpackages="$pkgname-doc"
+source="$pkgname-$pkgver.tar.gz::https://github.com/TecharoHQ/anubis/archive/refs/tags/v$pkgver.tar.gz"
 options="net" # go modules
 
 build() {
@@ -22,8 +21,9 @@ check() {
 
 package() {
 	install -Dm755 anubis -t "$pkgdir"/usr/bin/
+	install -Dm644 LICENSE -t "$pkgdir"/usr/share/licenses/$pkgname/
 }
 
 sha512sums="
-c01660644fca2d51803475032727f3c64a146250b626eaf28b295bfda536bb2270d880dce21985482d888602b80d1231f05da3bce27d344a8be85d810b4d48c9  anubis-1.10.0_git20250303.tar.gz
+4aab2a6811ca936800e13876fed0654f005a3ad1f57b4eed24e66231436aae617c701dbdcc91c31bea91dc42706c98e7af3b781d020d404f6f564aa4c14b49e6  anubis-1.13.0.tar.gz
 "
