community/gnome-shell: replace cantarell/source-code-pro with adwaita-fonts

--- a/community/gnome-shell/APKBUILD
+++ b/community/gnome-shell/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: team/gnome <pabloyoyoista@postmarketos.org>
 pkgname=gnome-shell
 pkgver=48.0
-pkgrel=0
+pkgrel=1
 pkgdesc="GNOME shell"
 url="https://gitlab.gnome.org/GNOME/gnome-shell"
 # gjs -> mozjs
@@ -10,11 +10,10 @@ arch="all !armhf"
 license="GPL-2.0-or-later"
 depends="
 	accountsservice
+	adwaita-fonts
 	adwaita-icon-theme
 	desktop-file-utils
 	elogind
-	font-adobe-source-code-pro
-	font-cantarell
 	gnome-bluetooth
 	gnome-control-center
 	gnome-shell-schemas
